<resources>
    <string name="app_name">WPI Parking</string>
    <string name="title_activity_google_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="loading">Loading…</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="title_activity_chooser">ChooserActivity</string>
    <string name="title_activity_facebook_login">FacebookLoginActivity</string>
    <string name="title_activity_anonymous_auth">AnonymousAuthActivity</string>

    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate.</string>

    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate.</string>

    <string name="anonymous_auth">Sign in Anonymously</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full user.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="settings">Settings</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="parking_lot_full">FULL</string>
    <string name="one_spot">1 Spot</string>
    <string name="x_spots">%1$d Spots</string>
    <string name="closest_parking">Closest Parking</string>

    <!-- Geofence Strings -->

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_dwell">Dwell</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="fence_notification_text">
        Tap notification to view available parking
    </string>

    <!-- Parking Service Strings -->

    <string name="local_service_started">Local service started</string>
    <string name="local_service_stopped">Local service stopped</string>
    <string name="local_service_label">Parking Service</string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="account">Account</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="title_activity_bluetooth_disc">BluetoothDiscActivity</string>

    <string name="activity_updates_enabled">Activity updates enabled</string>
    <string name="activity_updates_not_enabled">Failed to enable activity updates</string>
    <string name="activity_updates_removed">Activity updates removed</string>
    <string name="activity_updates_not_removed">Failed to remove activity updates</string>
    <string name="suggest_wpi_parking">Do you need parking at WPI?</string>
    <string name="make_note">Make a note</string>
    <string name="save_note">Save note</string>
    <string name="notes">Notes</string>
    <string name="tap_to_take_picture">Tap below to take a picture:</string>
    <string name="uploading">Uploading...</string>
    <string name="login_choose">Choose a login method</string>
    <string name="send_feedback">Send feedback</string>
    <string name="survey_url">https://goo.gl/forms/TbvKsRwib2KVhfm22</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_bluetooth">Your car bluetooth name</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_parking_notifications">Enable notifications</string>
    <string name="pref_description_parking_notifications">
        Displays a notification when approaching WPI
    </string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_bluetooth">Bluetooth</string>
    <string name="pref_summary_bluetooth">Selecting your vehicle\'s bluetooth device allows the app to better determine when you are driving</string>
    <string name="none">None</string>

</resources>
