<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_make_note"
            android:icon="@drawable/ic_menu_note_add"
            android:title="@string/make_note" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_send_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/send_feedback" />
            <item
                android:id="@+id/nav_disconnect"
                android:icon="@drawable/ic_menu_disconnect"
                android:title="@string/disconnect" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_log_out"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
