<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.frankgh.wpiparking.auth.AnonymousAuthActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_firebase_lockup"
        android:src="@drawable/wpi_parking_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_anonymous"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Anonymous Sign In"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/anonymous_status_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/signed_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_anonymous" />

    <TextView
        android:id="@+id/anonymous_status_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anonymous_status_id"
        tools:text="Email: none" />

    <Button
        android:id="@+id/button_anonymous_sign_in"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anonymous_status_email" />

    <Button
        android:id="@+id/button_anonymous_sign_out"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/sign_out"
        app:layout_constraintLeft_toRightOf="@+id/button_anonymous_sign_in"
        app:layout_constraintTop_toTopOf="@+id/button_anonymous_sign_in" />

    <TextView
        android:id="@+id/title_linking"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:text="Account Linking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_anonymous_sign_in" />

    <EditText
        android:id="@+id/field_email"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_linking" />

    <EditText
        android:id="@+id/field_password"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toRightOf="@+id/field_email"
        app:layout_constraintTop_toTopOf="@+id/field_email" />

    <Button
        android:id="@+id/button_link_account"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Link Account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_email" />

</android.support.constraint.ConstraintLayout>